implimented state to track topic progress and score

--- a/src/style.css
+++ b/src/style.css
@@ -2,31 +2,30 @@ body {
   font-family: consolas, "Liberation Mono", courier, monospace;
   background-color: #eee;
   margin: 0px;
+  color: #444444;
 }
 .container {
   display: flex;
   align-items: center;
   flex-direction: column;
   height: 100vh;
-  padding: 10px;
+}
+.question-container {
+  text-align: center;
+  padding: 0px 10px;
 }
 .answers {
   padding: 20px 40px;
-  border-radius: 5px;
+  border-radius: 4px;
   margin-bottom: 10px;
 }
-
 .answers:hover {
   opacity: 0.8;
   cursor: pointer;
 }
-.question-container {
-  text-align: center;
-}
-.question-description {
+.text-box {
   padding: 10px 20px;
-  background-color: rgb(127, 219, 255);
-  border-radius: 5px;
+  border-radius: 4px;
   margin-bottom: 10px;
 }
 
@@ -43,6 +42,9 @@ body {
 .bg-red {
   background-color: #f0171e;
 }
+.bg-blue {
+  background-color: rgb(127, 219, 255);
+}
 
 /* buttons */
 .btn {
@@ -54,9 +56,9 @@ body {
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
-  border: 2px solid rgb(127, 219, 255);
+  border: 3px solid #444444;
   background-color: #eee;
-  color: rgb(127, 219, 255);
+  color: #444444;
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 10px;
@@ -65,8 +67,54 @@ body {
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 .btn:hover {
-  background-color: rgb(127, 219, 255);
+  background-color: #444444;
   color: #eee;
+}
+
+/*Navbar css*/
+#nav {
+  background-color: #444444;
+  color: #d5d5d5;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  font-size: 1.5em;
+  margin-bottom: 20px;
+}
+#nav a {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+.logo {
+  display: flex;
+  align-items: center;
+  padding: 3px 5px 0px 5px;
+  margin-left: 20px;
+  background: #d5d5d5;
+  color: #444444;
+  border-radius: 3px;
+  cursor: pointer;
+  text-decoration: none;
+}
+.logo:hover {
+  opacity: 0.7;
+}
+#icon-container {
+  padding-right: 20px;
+  display: flex;
+  flex-direction: row;
+}
+.profile-icon-link {
+  margin: auto;
+  width: 35px;
+  height: 35px;
+  padding: 5px;
+  cursor: pointer;
+}
+.profile-icon-link:hover {
+  opacity: 0.7;
 }
 
 /*
