--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,6 @@
+html {
+  overflow-y: scroll;
+}
 body {
   font-family: consolas, "Liberation Mono", courier, monospace;
   background-color: #eee;
@@ -10,9 +13,12 @@ body {
   flex-direction: column;
   height: 100vh;
 }
-.question-container {
+
+/* Questions component */
+.center-container {
   text-align: center;
   padding: 0px 10px;
+  width: 95%;
 }
 .answers {
   padding: 20px 40px;
@@ -27,6 +33,26 @@ body {
   padding: 10px 20px;
   border-radius: 4px;
   margin-bottom: 10px;
+}
+
+/* ProgressBar component */
+.progress-bar {
+  border-radius: 6px;
+  display: flex;
+  background-color: #dddddd;
+  margin-bottom: 5px;
+}
+.progress {
+  background-color: #42d823;
+  height: 10px;
+}
+.icon {
+  width: 35px;
+  height: 35px;
+}
+.results-display {
+  height: 40px;
+  border-radius: 6px;
 }
 
 /*Utility*/
@@ -44,6 +70,18 @@ body {
 }
 .bg-blue {
   background-color: rgb(127, 219, 255);
+}
+.border-radius-left {
+  border-radius: 6px 0px 0px 6px;
+}
+.border-radius {
+  border-radius: 6px 6px 6px 6px;
+}
+.font-bold {
+  font-weight: 700;
+}
+.header {
+  margin-top: 0px;
 }
 
 /* buttons */
@@ -69,6 +107,27 @@ body {
 .btn:hover {
   background-color: #444444;
   color: #eee;
+}
+
+/*TopicsMenus*/
+.topic-menu-container {
+  max-width: 500px;
+  text-align: center;
+}
+.topic-name {
+  padding: 10px 20px;
+  border-radius: 4px 4px 0px 0px;
+}
+.topic-lessons-container {
+  padding: 10px 20px;
+  border-radius: 0px 0px 4px 4px;
+  margin-bottom: 10px;
+}
+.btn-lessons {
+  margin: 5px;
+  background-color: rgb(160, 160, 160);
+  border: 3px solid #444444;
+  color: #444444;
 }
 
 /*Navbar css*/
